--- a/op.css
+++ b/op.css
@@ -197,7 +197,7 @@ header{
         border-radius: 10px;
         background: #fefefe;
         margin: 6px 0;
-        transition: .5s;
+        transition:ease-out .25s;
     }
     .hamburger.active .line:nth-child(1){
         transform: rotate(-45deg);
@@ -206,6 +206,7 @@ header{
         left: 0%;
     }
     .hamburger.active .line:nth-child(2){
+        transition: none;
         opacity: 0;
         
     }
